<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.sign_up.SignUpFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                app:cardCornerRadius="30dp"
                app:cardElevation="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="24dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sign_up"
                        android:textAlignment="center"
                        android:textColor="@color/green"
                        android:textSize="36sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/tv_email"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="40dp"
                        android:background="@drawable/edittext_custom"
                        android:drawableStart="@drawable/email_icon"
                        android:drawablePadding="8dp"
                        android:hint="@string/email"
                        android:importantForAutofill="no"
                        android:inputType="textEmailAddress"
                        android:padding="8dp"
                        android:textColor="@color/black"
                        android:textColorHighlight="@color/cardview_dark_background" />

                    <EditText
                        android:id="@+id/tv_name"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/edittext_custom"
                        android:drawableStart="@drawable/person_icon"
                        android:drawablePadding="8dp"
                        android:hint="@string/name"
                        android:importantForAutofill="no"
                        android:padding="8dp"
                        android:textColor="@color/black"
                        android:textColorHighlight="@color/cardview_dark_background"

                        android:inputType="text"
                        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "/>

                    <EditText
                        android:id="@+id/tv_phone"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/edittext_custom"
                        android:drawableStart="@drawable/phone_icon"
                        android:drawablePadding="8dp"
                        android:hint="@string/phone"
                        android:importantForAutofill="no"
                        android:inputType="phone"
                        android:padding="8dp"
                        android:textColor="@color/black"
                        android:textColorHighlight="@color/cardview_dark_background" />

                    <EditText
                        android:id="@+id/tv_password"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/edittext_custom"
                        android:drawableStart="@drawable/lock_icon"
                        android:drawablePadding="8dp"
                        android:hint="@string/password"
                        android:importantForAutofill="no"
                        android:inputType="textPassword"
                        android:padding="8dp"
                        android:textColor="@color/black"
                        android:textColorHighlight="@color/cardview_dark_background" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/btn_take_picture"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="5dp"
                            android:layout_weight="1"
                            android:backgroundTint="@color/green"
                            android:text="@string/take_picture"
                            android:textSize="18sp"
                            app:cornerRadius="20dp"
                            tools:ignore="ButtonStyle" />

                        <Button
                            android:id="@+id/btn_pick_picture"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:backgroundTint="@color/green"
                            android:text="@string/pick_picture"
                            android:textSize="18sp"
                            app:cornerRadius="20dp"
                            tools:ignore="ButtonStyle" />
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/iv_picture"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:importantForAccessibility="no"
                        android:src="@drawable/gallery" />

                    <Button
                        android:id="@+id/btn_sign_up"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginTop="30dp"
                        android:backgroundTint="@color/green"
                        android:text="@string/sign_up"
                        android:textSize="18sp"
                        app:cornerRadius="20dp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>