<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.log_in.LoginFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                app:cardCornerRadius="30dp"
                app:cardElevation="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="24dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/login"
                        android:textAlignment="center"
                        android:textColor="@color/green"
                        android:textSize="36sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="40dp"
                        android:background="@drawable/edittext_custom"
                        android:drawableStart="@drawable/email_icon"
                        android:drawablePadding="8dp"
                        android:hint="@string/email"
                        android:importantForAutofill="no"
                        android:inputType="textEmailAddress"
                        android:padding="8dp"
                        android:textColor="@color/black"
                        android:textColorHighlight="@color/cardview_dark_background" />

                    <EditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/edittext_custom"
                        android:drawableStart="@drawable/lock_icon"
                        android:drawablePadding="8dp"
                        android:hint="@string/password"
                        android:importantForAutofill="no"
                        android:inputType="textPassword"
                        android:padding="8dp"
                        android:textColor="@color/black"
                        android:textColorHighlight="@color/cardview_dark_background" />

                    <Button
                        android:id="@+id/btn_login"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginTop="20dp"
                        android:backgroundTint="@color/green"
                        android:text="@string/login"
                        android:textSize="18sp"
                        app:cornerRadius="20dp" />

                    <LinearLayout
                        android:id="@+id/user_line"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:visibility="invisible">

                        <View
                            android:layout_width="0dp"
                            android:layout_height="5dp"
                            android:layout_weight="1"
                            android:background="@android:color/darker_gray" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="8dp"
                            android:text="@string/or"
                            android:textColor="@android:color/darker_gray"
                            android:textSize="20sp" />

                        <View
                            android:layout_width="0dp"
                            android:layout_height="5dp"
                            android:layout_weight="1"
                            android:background="@android:color/darker_gray" />
                    </LinearLayout>


                    <Button
                        android:id="@+id/btn_continue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:backgroundTint="@color/white"
                        android:textAlignment="center"
                        android:textColor="@color/green"
                        android:textSize="18sp"
                        android:visibility="invisible"
                        app:cornerRadius="20dp" />

                    <Button
                        android:id="@+id/btn_register"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:backgroundTint="@color/white"
                        android:padding="15dp"
                        android:text="@string/not_yet_registered"
                        android:textAlignment="center"
                        android:textColor="@color/green"
                        android:textSize="18sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </ScrollView>
</LinearLayout>