<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.add_ride.AddRideFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/backgroundColor"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1">

                    <androidx.fragment.app.FragmentContainerView
                        android:id="@+id/origin_location_fragment"
                        android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </androidx.cardview.widget.CardView>

                <ImageButton
                    android:id="@+id/btn_current_location_origin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:importantForAccessibility="no"
                    android:padding="12dp"
                    android:src="@drawable/my_location_icon" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1">

                    <androidx.fragment.app.FragmentContainerView
                        android:id="@+id/destination_location_fragment"
                        android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </androidx.cardview.widget.CardView>

                <ImageButton
                    android:id="@+id/btn_current_location_destination"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:importantForAccessibility="no"
                    android:padding="12dp"
                    android:src="@drawable/my_location_icon" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_show_route"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:backgroundTint="@android:color/transparent"
                android:text="@string/show_route"
                android:textColor="@color/black"
                app:cornerRadius="15dp"
                app:icon="@drawable/map_icon"
                app:iconTint="@color/green"
                app:strokeColor="@color/green"
                app:strokeWidth="3dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_date"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:hint="@string/select_date"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="16sp"
                    app:icon="@drawable/date_icon"
                    app:iconTint="@color/green" />

                <Button
                    android:id="@+id/btn_time"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:hint="@string/select_time"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="16sp"
                    app:icon="@drawable/clock_icon"
                    app:iconTint="@color/green" />
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColorHint="@color/black"
                app:boxStrokeColor="@color/green"
                app:hintTextColor="@color/green">

                <AutoCompleteTextView
                    android:id="@+id/drop_down_seats"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/seat_icon"
                    android:drawablePadding="10dp"
                    android:hint="@string/available_seats"
                    android:inputType="none"
                    android:saveEnabled="false"
                    android:textSize="18sp"
                    tools:ignore="SpeakableTextPresentCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <EditText
                android:id="@+id/et_price"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/edit_text_background"
                android:drawableStart="@drawable/payment_icon"
                android:drawablePadding="13dp"
                android:hint="@string/enter_price"
                android:importantForAutofill="no"
                android:inputType="number"
                android:padding="12dp"
                android:textColor="@color/primaryTextColor"
                android:textColorHint="@color/black"
                android:textSize="18sp" />

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/map_fragment"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="16dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_cancel"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:text="@string/cancel"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:icon="@drawable/cancel_icon"
                    app:iconGravity="textStart"
                    app:iconPadding="10dp"
                    app:iconTint="@color/red" />

                <Button
                    android:id="@+id/btn_create_ride"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:text="@string/create_ride"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:icon="@drawable/ok_icon"
                    app:iconGravity="textStart"
                    app:iconPadding="10dp"
                    app:iconTint="@color/darkGreen" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        app:menu="@menu/bottom_menu" />
</LinearLayout>